@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: datafile.c,v 1.188 2010/07/01 22:49:48 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: datafile.c,v 1.189 2010/07/08 04:54:51 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - datafile.c */
@@ -1219,13 +1219,21 @@ df_close()
 	free_at(ydata_func.at);
 	ydata_func.at = NULL;
     }
-    /*{{{  free any use expression storage */
+
+    /* free any use expression storage */
     for (i = 0; i < MAXDATACOLS; ++i)
 	if (use_spec[i].at) {
 	    free_at(use_spec[i].at);
 	    use_spec[i].at = NULL;
 	}
-    /*}}} */
+
+    /* free binary matrix data */
+    if (df_matrix) {
+	for (i = 0; i < df_num_bin_records; i++) {
+	    free(df_bin_record[i].memory_data);
+	    df_bin_record[i].memory_data = NULL;
+	}
+    }
 
     if (!mixed_data_fp) {
 #if defined(PIPES)
